apps/staging/karakeep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
  namespace: karakeep
spec:
  ingressClassName: traefik
  rules:
    - host: karakeep.pytt.io
      http:
        paths:
          - backend:
              service:
                name: karakeep-web
                port:
                  number: 3000
            path: /
            pathType: Prefix
